# Digital-Courtroom

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_DESCRIPTION.md  README.md  main.py  pyproject.toml  schema.json
.agent/rules/: specify-rules.md
.github/workflows/: main.yml
.specify/memory/: constitution.md  soul.md
audit/report_bypeer_received/: audit_report.md
audit/report_oneself_generated/: report.md  run_manifest.json
audit/report_onpeer_generated/: report.md  run_manifest.json
docs/: ARCHITECTURE_NOTES.md  ARCHITECTURE_NOTES_Report.md  orchestration.md
scripts/: check_health.py  docker-entrypoint.sh  lint_commits.sh  mock_synthesis.py
specs/001-foundational-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-foundational-scaffolding/checklists/: foundation.md  requirements.md
specs/001-foundational-scaffolding/contracts/: internal_contracts.md
specs/002-observability-error-handling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-observability-error-handling/checklists/: compliance.md  requirements.md
specs/003-pydantic-state-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-pydantic-state-schema/checklists/: data_validation.md  requirements.md
specs/004-forensic-tools-sandbox/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-forensic-tools-sandbox/checklists/: forensics.md  requirements.md
specs/004-forensic-tools-sandbox/contracts/: python_api.md
specs/005-context-builder-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-context-builder-init/checklists/: quality_review.md  requirements.md
specs/006-parallel-detectives/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-parallel-detectives/checklists/: forensics.md  requirements.md
specs/006-parallel-detectives/contracts/: node_interfaces.md
specs/007-evidence-aggregator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-evidence-aggregator/checklists/: orchestration-and-forensics.md  requirements.md
specs/008-judicial-nodes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-judicial-nodes/checklists/: reasoning_resilience.md  requirements.md
specs/009-deterministic-synthesis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-deterministic-synthesis/checklists/: requirements.md  synthesis_quality.md
specs/010-report-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-report-generation/checklists/: requirements.md  requirements_quality.md
specs/010-report-generation/contracts/: report-structure.md
specs/011-e2e-langgraph-wiring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-e2e-langgraph-wiring/checklists/: orchestration.md  requirements.md
specs/011-e2e-langgraph-wiring/contracts/: cli_and_report.md
specs/012-bounded-agent-eval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-bounded-agent-eval/checklists/: reliability.md  requirements.md
specs/013-ironclad-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-ironclad-hardening/checklists/: hardening.md  requirements.md
specs/014-devops-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-devops-hardening/checklists/: devops_rigor.md  requirements.md
specs/014-devops-hardening/contracts/: makefile.md
src/: cli.py  config.py  exceptions.py  graph.py  main.py  state.py
src/judicial/: layer.py  rubrics.py  strategies.py
src/models/: forensic.py
src/nodes/: consistency_guard.py  context_builder.py  detectives.py  error_handler.py  evidence_aggregator.py  judges.py  judicial_nodes.py  justice.py  report_generator.py
src/templates/: report.md.j2
src/tools/: ast_tools.py  base.py  doc_tools.py  repo_tools.py  utils.py  vision_tools.py
src/utils/: logger.py  logging.py  manifest.py  observability.py  orchestration.py  security.py
tests/: conftest.py  test_config.py  test_scaffolding.py
tests/devops/: test_infrastructure.py
tests/harness/: run_judicial_mock.py
tests/integration/: conftest.py  test_bounded_eval.py  test_chaos_rollback.py  test_config.py  test_fault_tolerance.py  test_full_orchestration.py  test_full_pipeline.py  test_judicial_workflow.py  test_observability_context.py  test_synthesis_workflow.py
tests/integration/tools/: test_forensic_suite.py
tests/nodes/: test_context_builder.py
tests/performance/: test_report_speed.py  test_synthesis_perf.py
tests/unit/: test_batch_parsing.py  test_cli_validation.py  test_concurrency_controller.py  test_config_sync.py  test_evidence_aggregator.py  test_exceptions.py  test_fuzzing.py  test_graph_wiring.py  test_judges.py  test_justice.py  test_logger.py  test_observability.py  test_resilience.py  test_security.py  test_state.py  test_timeouts.py
tests/unit/nodes/: test_detectives.py  test_report.py
tests/unit/tools/: test_ast_tools.py  test_doc_tools.py  test_repo_tools.py  test_vision_tools.py
