[project]
name = "digital-courtroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "langgraph-cli[inmem]>=0.4.12",
    "python-dotenv>=1.2.1",
]
