[project]
name = "digital-courtroom"
version = "0.1.0"
description = "Digital Courtroom - Spec-Kit Foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.75.0",
    "gitingest>=0.3.1",
    "hf-xet>=1.3.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.9",
    "langgraph-cli[inmem]>=0.4.12",
    "langsmith>=0.7.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "tenacity>=9.1.4",
    "typing-extensions>=4.15.0",
    "cryptography>=44.0.1",
    "rich>=13.9.4",
    "psutil>=6.1.1",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
audit = "src.main:main"
courtroom = "src.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "COM", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF", "PT"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.2",
]
