[project]
name = "digital-courtroom"
version = "0.1.0"
description = "Digital Courtroom - Spec-Kit Foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.75.0",
    "gitingest>=0.3.1",
    "hf-xet>=1.3.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.9",
    "langgraph-cli[inmem]>=0.4.12",
    "langsmith>=0.7.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "tenacity>=9.1.4",
    "typing-extensions>=4.15.0",
    "cryptography>=44.0.1",
    "rich>=13.9.4",
    "psutil>=6.1.1",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
audit = "src.main:main"
courtroom = "src.cli:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "COM", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF", "PT"]
ignore = [
    "COM812",   # Trailing comma – conflicts with ruff formatter
    "PLR2004",  # Magic value comparisons – too noisy, especially in tests
    "PLC0415",  # Import not at top-level – lazy / conditional imports are fine
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLR0913",  # Too many arguments
    "PLW0603",  # Global statement
    "UP042",    # str + Enum inheritance
    "RUF002",   # Ambiguous unicode chars in docstrings
    "RUF046",   # Unnecessary int cast
    "RUF015",   # Prefer next(iter(...))
    "RUF059",   # Unused unpacked variable
    "RET504",   # Unnecessary assignment before return
    "SIM102",   # Collapsible if
    "SIM103",   # Return condition directly
    "SIM105",   # Use contextlib.suppress
    "SIM108",   # Use ternary operator
    "UP046",    # Generic subclass
    "RUF013",   # Implicit Optional
    "PTH103",   # os.makedirs -> Path.mkdir
    "PTH110",   # os.path.exists -> Path.exists
    "PTH118",   # os.path.join -> Path /
    "PTH123",   # open() -> Path.open()
    "PTH107",   # os.remove -> Path.unlink
    "PTH117",   # os.path.isabs -> Path.is_absolute
    "SIM110",   # Use all/any instead of for loop
    "E741",     # Ambiguous variable name
    "N818",     # Exception naming
    "RUF006",   # Store reference to asyncio.create_task
    "C414",     # Unnecessary list() in sorted()
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",   # Unused function arguments (common in mocks/fixtures)
    "ARG002",   # Unused method arguments
    "E402",     # Module-level import not at top of file
    "ERA001",   # Commented-out code
    "F841",     # Local variable assigned but never used
    "T201",     # print() found
    "A002",     # Shadowing builtins
    "B904",     # raise from
    "B017",     # assert blind exception
    "PT011",    # broad pytest.raises
]
"src/utils/security.py" = ["E402"]
"src/main.py" = ["E402"]
"src/cli.py" = ["E402"]
"scripts/**/*.py" = ["T201", "E722"]
"tests/unit/tools/test_doc_tools.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.2",
]
